--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+      <p>Статический блог про обучение HTML и CSS и JS.</p>
     </div>
     </section>
 
